fixed whitespace white space removed from the edges of the page

--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 body{
     display: flex;
     flex-direction: column;
-    padding: 0;
-    font-family: "Courier New", Courier, monospace;
+    font-family: "Roboto", Arial;
 }
-div{
-    margin: 0;
-}
+
 ul{
     margin: 0;
     padding: 0;
@@ -48,6 +45,7 @@ a{
     justify-content: center;
     align-items: center;
     background-color: cadetblue;
+    border-radius: 15px;
 }
 
 .footer,.header,.content_one{
@@ -136,9 +134,10 @@ a{
     margin-bottom: 5px;
     padding-bottom: 0;
 }
-html, body{
-    height:100%;
- }
+html, body {
+    margin: 0;
+    padding: 0;
+}
  p{
     margin:10px 0 15px 0;
     padding: 0;
